--- a/SurroundSound.qsf
+++ b/SurroundSound.qsf
@@ -54,3 +54,4 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VHDL_FILE FilterInterpolator.vhd
 set_global_assignment -name VHDL_FILE ButtonController.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE FilterManager.vhd
