--- a/SurroundSound.qsf
+++ b/SurroundSound.qsf
@@ -18,7 +18,7 @@
 #
 # Quartus Prime
 # Version 18.1.0 Build 625 09/12/2018 SJ Standard Edition
-# Date created = 13:37:09  May 13, 2019
+# Date created = 10:53:28  May 20, 2019
 #
 # -------------------------------------------------------------------------- #
 #
@@ -37,27 +37,21 @@
 
 
 set_global_assignment -name FAMILY "Cyclone V"
-set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY SorroundSoundTb
+set_global_assignment -name DEVICE 5CGXFC7C7F23C8
+set_global_assignment -name TOP_LEVEL_ENTITY SurroundSound
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:37:09  MAY 13, 2019"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:53:28  MAY 20, 2019"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Standard Edition"
-set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
-set_global_assignment -name VHDL_FILE SurroundSound.vhd
-set_global_assignment -name VHDL_FILE FilterTypes.vhd
-set_global_assignment -name VHDL_FILE FilterInterpolator.vhd
-set_global_assignment -name VHDL_FILE SorroundSoundTb.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-<<<<<<< HEAD
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE SurroundSound.vhd
+set_global_assignment -name VHDL_FILE FilterTypes.vhd
+set_global_assignment -name VHDL_FILE FilterManager.vhd
 set_global_assignment -name VHDL_FILE FilterInterpolator.vhd
 set_global_assignment -name VHDL_FILE ButtonController.vhd
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name VHDL_FILE FilterManager.vhd
-=======
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
->>>>>>> f68011707426c6d18ca6cf056fe76fcb64bea9df
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
