--- a/SurroundSound.qsf
+++ b/SurroundSound.qsf
@@ -56,3 +56,5 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VHDL_FILE FilterProcessor.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE IIS2ByteStream.vhd
+set_global_assignment -name VHDL_FILE ByteStream2IIS.vhd
