git ignore updateret

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,62 @@
 /SurroundSound.qsf
 /db/
 /incremental_db/
+
+**.qws
+**.bak
+**.rpt
+**.done
+**.smsg
+**.summary
+**.jdi
+**.pin
+**.db_info
+**.ammdb
+**.cdb
+**.dfp
+**.hdb
+**.sig
+**.logdb
+**.rcfdb
+**.dpi
+**.hb_info
+**.kpt
+**.opi
+**.qmsg
+**.xml
+**.ibd
+**.hsd
+**.hier_info
+**.hif
+**.html
+**.bpm
+**.txt
+**.ddb
+**.tmw_info
+**.json
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
